<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.OrthodoxApp"
    android:gravity="center"
    android:layout_gravity="center">
    <!--    android:layout_marginTop="20sp"-->

    <Button
        android:id="@+id/btn_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/btn_chngcal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/calendar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textAlignment="center"
        />

</LinearLayout>